syntax = "proto3";

package cart;

option go_package = "./pkg/protobuf/cart";

service CartService {
    rpc AddItem(AddItemRequest) returns (AddItemResponse) {}
    rpc RemoveItem(RemoveItemRequest) returns (RemoveItemResponse) {}
}

message CartItem {
    int64 id = 1;
    string name = 2;
    double price = 3;
    int64 quantity = 4;
}

// Add Item
message AddItemRequest {
    int64 user_id = 1;
    int64 product_id = 2;
}

message AddItemResponse {
    repeated CartItem items = 1;
}

// Remove Item
message RemoveItemRequest {
    int64 user_id = 1;
    int64 product_id = 2;
    int64 quantity = 3;
}

message RemoveItemResponse {
    repeated CartItem items = 1;
}